--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 .App {
   min-height: 100vh;
   display: flex;
-  background-image: url("./background.png");
+  /* background-image: url("./background.png"); */
   background-position: center;
   background-size: cover;
 }
@@ -20,3 +20,4 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
